examples/bugtest.grg
actions incrementer using Firm;

rule ReUsedEdges {
	pattern {
		node (x,y,z): Node;
		a: Node;
		b: Node;
		c: Node;
		x -e:Edge-> y; //ok
//		x -e-> y;      //duplicate error
//		x -e-> z;      //error
	}
	negative {
		x -e-> y;      //ok
//		x -e-> z;      //error
	}
	replace{
		x -e-> y;      //ok
//		x -e-> z;      //error
	}
}
